<resources>
    <string name="app_name">Easylipo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="loginFail">Failed to login</string>
    <string name="loginSuccess">Welcome !</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">Sign out</string>
    <string name="password">Password</string>
    <string name="my_batteries">My batteries</string>
    <string name="signup">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="signup_fail">Failed to create an account.</string>
    <string name="signup_activity_title">Sign Up</string>
    <string name="unexpected_error">Unexpected error. Retry later.</string>
    <string name="title_activity_activity_create_battery">New battery</string>
    <string name="failed_to_connect">Could not synchronize with the server</string>
    <string name="title_activity_activity_battery_details">ActivityBatteryDetails</string>
    <string name="title_activity_activity_battery_edit">ActivityBatteryEdit</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_for_tag">Waiting for a tag…</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="cycles">" cycles"</string>
    <string name="signup_easylipo">Sign up to EasyLipo</string>
    <string name="authenticating">"Authenticating… "</string>
    <string name="new_battery">New Battery</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="cells">Cells</string>
    <string name="discharge_rate_in_c">Discharge rate in C</string>
    <string name="charge_rate_in_c">Charge rate in C</string>
    <string name="capacity_in_mah">Capacity in mAh</string>
    <string name="acquisition_date">Acquisition date</string>
    <string name="charged">Charged</string>
    <string name="discharged">Discharged</string>
    <string name="no_account_yet_get_one">No account yet? Create one</string>
</resources>
