<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.theboredengineers.easylipo.ui.activities.LoginActivity"
                android:id="@+id/login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/loginLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_first_name"
            android:hint="@string/first_name"
            android:singleLine="true"
            android:layout_weight="1"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_last_name"
            android:hint="@string/last_name"
            android:singleLine="true"
            android:layout_weight="1"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_email"
            android:hint="@string/email"
            android:singleLine="true"
            android:layout_weight="1"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_username"
            android:hint="@string/username"
            android:singleLine="true"
            android:layout_weight="1"
            android:layout_below="@+id/loginLayout"
            android:layout_centerHorizontal="true"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:singleLine="true"
            android:ems="10"
            android:id="@+id/signup_password"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/buttonSignup"
        android:layout_below="@+id/loginLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"/>

</RelativeLayout>
